Add subscription utils and tests for them.

--- a/App/build.gradle
+++ b/App/build.gradle
@@ -9,6 +9,10 @@ buildscript {
 
 apply plugin: 'android'
 
+repositories {
+    mavenCentral()
+}
+
 sourceSets {
     instrumentTest {
         java.srcDir file('src/instrumentTest/java')
@@ -22,17 +26,18 @@ configurations {
 }
 
 dependencies {
-    repositories {
-        mavenCentral()
-    }
+    compile 'org.roboguice:roboguice:2.0'
+    compile 'com.netflix.rxjava:rxjava-core:0.15.1'
+    compile 'com.netflix.rxjava:rxjava-android:0.15.1'
     compile 'com.android.support:appcompat-v7:+'
     instrumentTestCompile files("$project.buildDir/classes/release")
     instrumentTestCompile 'junit:junit:4.10'
+    instrumentTestCompile "org.mockito:mockito-all:1.9.5"
     instrumentTestCompile 'org.robolectric:robolectric:2.1.+'
-    instrumentTestCompile 'com.google.android:android:4.0.1.2'
     instrumentTestCompile 'org.roboguice:roboguice:2.0'
     instrumentTestCompile 'com.netflix.rxjava:rxjava-core:0.15.1'
     instrumentTestCompile 'com.netflix.rxjava:rxjava-android:0.15.1'
+    instrumentTestCompile 'com.google.android:android:4.0.1.2'
 }
 
 android {
