--- a/App/build.gradle
+++ b/App/build.gradle
@@ -1,52 +1,28 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.android.tools.build:gradle:0.9.0'
+        classpath 'com.squareup.gradle:gradle-android-test-plugin:0.9.1-SNAPSHOT'
     }
 }
 
 apply plugin: 'android'
+apply plugin: 'android-test'
 
-repositories {
-    mavenCentral()
-}
-
-sourceSets {
-    instrumentTest {
-        java.srcDir file('src/instrumentTest/java')
-        resources.srcDir file('src/instrumentTest/res')
-    }
-}
-
-configurations {
-    instrumentTestCompile.extendsFrom runtime
-    instrumentTestRuntime.extendsFrom instrumentTestCompile
-}
-
-dependencies {
-    compile 'com.netflix.rxjava:rxjava-core:0.15.1'
-    compile 'com.netflix.rxjava:rxjava-android:0.15.1'
-    compile 'com.android.support:appcompat-v7:+'
-    instrumentTestCompile files("$project.buildDir/classes/release")
-    instrumentTestCompile 'junit:junit:4.10'
-    instrumentTestCompile "org.mockito:mockito-all:1.9.5"
-    instrumentTestCompile 'org.robolectric:robolectric:2.1.+'
-    instrumentTestCompile 'com.netflix.rxjava:rxjava-core:0.15.1'
-    instrumentTestCompile 'com.netflix.rxjava:rxjava-android:0.15.1'
-    instrumentTestCompile 'com.google.android:android:4.0.1.2'
-}
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    buildToolsVersion "19.0.3"
 
     defaultConfig {
-        minSdkVersion 7
+        minSdkVersion 8
         targetSdkVersion 19
+        versionCode 1
+        versionName "1.0"
     }
-
     buildTypes {
         release {
             runProguard false
@@ -55,9 +31,13 @@ android {
     }
 }
 
-task instrumentTest(type:Test, dependsOn: assemble) {
-    testClassesDir = project.sourceSets.instrumentTest.output.classesDir
-    classpath = project.sourceSets.instrumentTest.runtimeClasspath
-}
+dependencies {
+    compile 'com.android.support:appcompat-v7:+'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.netflix.rxjava:rxjava-core:0.17.1'
+    compile 'com.netflix.rxjava:rxjava-android:0.17.1'
 
-check.dependsOn instrumentTest
+    // Unit test build
+    testCompile 'junit:junit:4.8.2'
+    testCompile "org.mockito:mockito-all:1.9.5"
+}
