--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.netflix.rxjava:rxjava-core:0.19.1'
-    compile 'com.netflix.rxjava:rxjava-android:0.19.1'
+    compile 'io.reactivex:rxjava:1.0.0'
+    compile 'io.reactivex:rxandroid:0.22.0'
 
     // Unit test build
     testCompile 'junit:junit:4.8.2'
