--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
         classpath 'org.robolectric:robolectric-gradle-plugin:0.14.1'
+        classpath 'me.tatarka:gradle-retrolambda:2.4.0'
     }
 }
 
@@ -17,13 +18,14 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'robolectric'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'retrolambda'
 
 android {
     compileSdkVersion 19
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 16
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -34,6 +36,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+retrolambda {
+    javaVersion JavaVersion.VERSION_1_6
 }
 
 dependencies {
