Add Dagger for dependency injection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.tehmou.rxbookapp" >
 
     <application
+        android:name="com.tehmou.rxbookapp.RxBookApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
