--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,14 @@ buildscript {
     }
 }
 
+repositories {
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    mavenCentral()
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'robolectric'
-
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 19
@@ -36,6 +41,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.reactivex:rxjava:1.0.6'
     compile 'io.reactivex:rxandroid:0.24.0'
+    compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
+    apt 'com.google.dagger:dagger-compiler:2.0-SNAPSHOT'
+    compile 'javax.annotation:jsr250-api:1.0'
 
     // Unit test build
     testCompile 'junit:junit:4.8.2'
