Added Android Unit testing
Removed Robolectric

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.1.0'
     }
 }
 
@@ -14,7 +14,6 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'robolectric'
 apply plugin: 'retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
 
@@ -57,6 +56,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
 
     // Unit test build
-    testCompile 'junit:junit:4.8.2'
-    testCompile "org.mockito:mockito-all:1.9.5"
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
 }
