--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,12 @@ buildscript {
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
+}
+
+plugins {
+    id 'me.tatarka.retrolambda' version '3.1.0'
 }
 
 repositories {
@@ -14,7 +18,6 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
