--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,27 @@ dependencies {
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
+}
 
+// Get the path to ADB.  Required when running tests directly from Android Studio.
+// Source: http://stackoverflow.com/a/26771087/112705
+def adb = android.getAdbExe().toString()
+def packageName = 'com.tehmou.rxbookapp'
+def command = "$adb shell pm grant $packageName android.permission.SET_ANIMATION_SCALE".split(' ')
+
+task grantAnimationPermission(type: Exec, dependsOn: 'installDebug') {
+    println '================================================='
+    println 'Granting permission to disable animations'
+    commandLine command
+    println '================================================='
+}
+
+afterEvaluate {
+    // When launching individual tests from Android Studio, it seems that only the assemble tasks
+    // get called directly, not the install* versions
+    tasks.each { task ->
+        if (task.name.startsWith('assembleDebugAndroidTest')) {
+            task.dependsOn grantAnimationPermission
+        }
+    }
 }
