--- a/.travis.yml
+++ b/.travis.yml
@@ -17,20 +17,7 @@ android:
     # The SDK version used to compile your project
     - android-22
 
-    # Emulator for UI testing
-    # version 21 is already provided by travis.
-    - sys-img-armeabi-v7a-android-21
-
     - extra
 
-before_install:
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-    - emulator -avd test -skin QVGA -no-audio -no-window &
-
-before_script:
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
-
 script:
-    - ./gradlew test
-    - ./gradlew connectedAndroidTest
+    - ./gradlew build
