Create library module and move RxViewBinder into it

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ retrolambda {
 }
 
 dependencies {
+    compile project(':rxandroidarchitecture')
+
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.reactivex:rxjava:1.0.11'
