--- a/rxandroidarchitecture/build.gradle
+++ b/rxandroidarchitecture/build.gradle
@@ -41,11 +41,15 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.11'
     compile 'io.reactivex:rxandroid:0.24.0'
 
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+
     // Unit test build
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
     testCompile 'org.powermock:powermock-api-mockito:1.6.1'
     testCompile 'org.powermock:powermock-module-junit4:1.6.1'
+
+    androidTestCompile 'com.android.support:support-annotations:22.2.0'
 }
 
 apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
