--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,19 @@ android {
         preDexLibraries false
         incremental true
     }
+    signingConfigs {
+        release {
+            storeFile file("rxgithubapp.jks")
+            storePassword "password"
+            keyAlias "rxgithubapp"
+            keyPassword "password"
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
