--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -54,4 +54,4 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:23.1.0'
 }
 
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+apply from: 'gradle-mvn-push.gradle'
