--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'javax.annotation:jsr250-api:1.0'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp3:okhttp-android-support:3.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
 
@@ -92,7 +94,7 @@ dependencies {
 
     // Stetho
     debugCompile 'com.facebook.stetho:stetho:1.3.1'
-    debugCompile 'com.facebook.stetho:stetho-okhttp:1.3.1'
+    debugCompile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
 
     // Schematic
     apt 'net.simonvt.schematic:schematic-compiler:0.6.7'
