--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:support-annotations:23.3.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
 
     // RxJava
     compile 'io.reactivex:rxjava:1.1.3'
@@ -62,7 +64,6 @@ dependencies {
 
     // Javadoc generation needs dependencies in classpath
     javadocDeps 'com.android.support:support-annotations:23.3.0'
-    javadocDeps 'com.squareup.retrofit:retrofit:1.9.0'
     javadocDeps 'io.reactivex:rxjava:1.1.3'
     javadocDeps 'io.reactivex:rxandroid:1.1.0'
 }
