--- a/appshared/build.gradle
+++ b/appshared/build.gradle
@@ -36,10 +36,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'javax.annotation:jsr250-api:1.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp3:okhttp-android-support:3.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
 
     // RxJava
     compile 'io.reactivex:rxjava:1.2.3'
@@ -51,8 +53,8 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.3'
 
     // Stetho
-    debugCompile 'com.facebook.stetho:stetho:1.3.1'
-    debugCompile 'com.facebook.stetho:stetho-okhttp:1.3.1'
+    debugCompile 'com.facebook.stetho:stetho:1.4.1'
+    debugCompile 'com.facebook.stetho:stetho-okhttp3:1.4.1'
 
     // Leak tracing
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
