--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-annotations:24.2.1'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
 
     // RxJava
     compile 'io.reactivex:rxjava:1.2.3'
@@ -66,7 +68,6 @@ dependencies {
 
     // Javadoc generation needs dependencies in classpath
     javadocDeps 'com.android.support:support-annotations:24.2.1'
-    javadocDeps 'com.squareup.retrofit:retrofit:1.9.0'
     javadocDeps 'io.reactivex:rxjava:1.2.3'
     javadocDeps 'io.reactivex:rxandroid:1.2.1'
 }
