--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     // Stetho
     debugCompile 'com.facebook.stetho:stetho:1.3.1'
     debugCompile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
-    debugCompile 'com.facebook.stetho:stetho-urlconnection:1.3.1'
+  //  debugCompile 'com.facebook.stetho:stetho-urlconnection:1.3.1'
 
     // Schematic
     apt 'net.simonvt.schematic:schematic-compiler:0.6.2'
