--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ android:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
     # - platform-tools
-    # - tools
+    - tools
 
     # The BuildTools version used by your project
-    - build-tools-22.0.1
+    - build-tools-23.0.3
 
     # The SDK version used to compile your project
-    - android-22
+    - android-23
 
     - extra
 
