--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply plugin: 'com.github.ben-manes.versions'
 
 buildscript {
