--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,17 @@ android:
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-23
 
+before_script:
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell settings put global window_animation_scale 0 &
+  - adb shell settings put global transition_animation_scale 0 &
+  - adb shell settings put global animator_duration_scale 0 &
+  - adb shell input keyevent 82 &
+
 script:
-  - ./gradlew test
+  - ./gradlew test spoon
 
 notifications:
   email: false
