--- a/appshared/build.gradle
+++ b/appshared/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+    publishNonDefault true
 
     defaultConfig {
         minSdkVersion 15
@@ -28,7 +29,8 @@ android {
 }
 
 dependencies {
-    compile project(':reark')
+    debugCompile project(path: ':reark', configuration: 'debug')
+    releaseCompile project(path: ':reark', configuration: 'release')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
