--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+    publishNonDefault true
 
     defaultConfig {
         minSdkVersion 15
