--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("rxgithubapp.jks")
+            storeFile file("../appshared/rxgithubapp.jks")
             storePassword "password"
             keyAlias "rxgithubapp"
             keyPassword "password"
@@ -41,7 +41,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), '../appshared/proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
