--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,8 @@
+apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'spoon'
+
 buildscript {
     repositories {
         mavenCentral()
@@ -9,10 +14,6 @@ repositories {
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     mavenCentral()
 }
-
-apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
