--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -8,11 +8,6 @@ buildscript {
     repositories {
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
-    }
 }
 
 android {
@@ -25,6 +20,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -65,6 +62,7 @@ dependencies {
     testCompile 'org.powermock:powermock-module-junit4:1.6.4'
 
     androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile 'com.android.support.test:runner:0.5'
 
     // Javadoc generation needs dependencies in classpath
     javadocDeps 'com.android.support:support-annotations:23.3.0'
