Add massive wait times for integration tests to fix Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ before_script:
 script:
   - ./gradlew test spoon
 
+after_failure:
+  - find . -path "*spoon*.json" | xargs grep "fail"
+
 notifications:
   email: false
 
