Update travis to android-25

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - platform-tools
     - tools
     - android-24
+    - android-25
     - build-tools-25.0.2
     - extra-google-m2repository
     - extra-android-m2repository
@@ -21,11 +22,6 @@ before_script:
   - adb shell settings put global transition_animation_scale 0 &
   - adb shell settings put global animator_duration_scale 0 &
   - adb shell input keyevent 82 &
-
-licenses:
-  - 'android-sdk-preview-license-.+'
-  - 'android-sdk-license-.+'
-  - 'google-gdk-license-.+'
 
 script:
   - ./gradlew test spoon
