Travis config update: remove no-audio, add licenses

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ jdk:
   - oraclejdk8
 
 android:
+  licenses:
+    - android-sdk-license-.+
+    - '.+'
   components:
     - platform-tools
     - tools
@@ -16,7 +19,7 @@ android:
 
 before_script:
   - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell settings put global window_animation_scale 0 &
   - adb shell settings put global transition_animation_scale 0 &
