--- a/appshared/build.gradle
+++ b/appshared/build.gradle
@@ -1,25 +1,22 @@
 apply plugin: 'com.android.library'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
-
 apply from: 'env-config.gradle'
 
 def BOOL = "boolean"
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
-    publishNonDefault true
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
         buildConfigField(BOOL, "IS_CI_BUILD", ci_build)
     }
     buildTypes {
+        debug {}
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -35,37 +32,42 @@ android {
 }
 
 dependencies {
-    debugCompile project(path: ':reark', configuration: 'debug')
-    releaseCompile project(path: ':reark', configuration: 'release')
+    implementation project(':reark')
 
     // Support libraries
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:support-annotations:27.0.2'
 
     // Retrofit
-    compile 'com.squareup.okhttp3:okhttp-android-support:3.5.0'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.okhttp3:okhttp-android-support:3.9.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    // Glide
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    // RxAndroid and RxBinding
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 
     // Dagger
-    apt 'com.google.guava:guava:20.0'
-    compile 'com.google.dagger:dagger:2.8'
-    apt 'com.google.dagger:dagger-compiler:2.8'
+    implementation 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.guava:guava:23.0'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 
     // Stetho
-    debugCompile 'com.facebook.stetho:stetho:1.4.2'
-    debugCompile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+    debugImplementation 'com.facebook.stetho:stetho:1.5.0'
+    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     // Leak tracing
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
     // Unit test build
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.assertj:assertj-core:3.6.1'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.6'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.6'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.assertj:assertj-core:3.8.0'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
 }
